<resources>
  <string name="unideal_app_name">UNIBuy</string>
  <string name="application_name" translatable="false">UNIBuy</string>
  <string name="text_remember_me">Keep me signed in</string>
  <string name="text_new_to_unideal">New to UNIBuy ?&#160;</string>
  <string name="text_forgot_password">Forgot Password ?</string>
  <string name="text_login">Login</string>
  <string name="text_password">PASSWORD</string>
  <string name="hint_full_name">FULL NAME</string>
  <string name="hint_email">EMAIL</string>
  <string name="hint_contact_number">CONTACT NUMBER</string>
  <string name="hint_referral_code">REFERRAL CODE</string>
  <string name="text_gender">GENDER</string>
  <string name="text_sign_up">Sign Up</string>
  <string name="font_Avenir_Book" translatable="false">fonts/Avenir-Book.ttf</string>
  <string name="font_Avenir_Heavy" translatable="false">fonts/Avenir-Heavy.otf</string>
  <string name="font_Avenir_Medium" translatable="false">fonts/Avenir-Medium.otf</string>
  <string name="font_Avenir_Semibold" translatable="false">fonts/Avenir-semibold.ttf</string>
  <string name="tab_menu_english" translatable="false">English</string>
  <string name="tab_menu_hong_kong" translatable="false">右侧文字</string>
  <string name="job_center">Job Center</string>
  <string name="dispute_center">Dispute Center</string>
  <string name="settings">Settings</string>
  <string name="title_login">Log In</string>
  <string name="text_signup_here">Sign Up Here!</string>
  <string name="dummy_description" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Curabitur fermentum, nunc ac venenatis mollis, orci lorem vestibulum nibh, a consectetur felis
    sem vel magna. Phasellus rutrum semper bibendum. Proin posuere lacus eget magna pharetra, vel
    vulputate mi consectetur. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur
    ridiculus mus. Aliquam pharetra dui non lacus vulputate, ut finibus odio sollicitudin. Donec
    viverra id nunc quis condimentum. Pellentesque nec justo sed diam bibendum suscipit ac ac dui.
    Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
    Aliquam nec massa vitae eros cursus blandit. Mauris accumsan lectus mauris, in rhoncus arcu
    pharetra et. Quisque aliquam rutrum sodales. Aliquam vel libero nulla.
  </string>
  <string name="dummy_title" translatable="false">what are different type of Taxations while implements 100 kgs iron?
  </string>
  <string name="tab_title_applied">Applied</string>
  <string name="tab_title_in_progress">In Progress</string>
  <string name="tab_title_completed">Completed</string>
  <string name="tab_title_paused">Paused</string>
  <string name="tab_title_cancelled">Cancelled</string>
  <string name="text_open_camera">Open Camera</string>
  <string name="text_choose_from_library">Choose From Library</string>
  <string name="hint_enter_new_password">Enter New Password</string>
  <string name="hint_confirm_new_password">Confirm New Password</string>
  <string name="hint_old_password">Old Password</string>
  <string name="text_reset_password">Submit</string>
  <string name="dummy_consignment_size" translatable="false">60 HK$</string>
  <string name="btn_apply_job">Apply</string>
  <string name="btn_send">Send</string>
  <string name="proposal_sub_title">Add your Proposal Message</string>
  <string name="proposal_title">Proposal</string>
  <string name="details">"Details"</string>
  <string name="dummy_text_long" translatable="false">Please select your photo</string>
  <string name="ok">OK</string>
  <string name="btn_cancel">Cancel</string>
  <string name="refer_code_share_text">Hello ! Have you tried the UNIBuy App? It provides you a platform to request &amp; resolve jobs. Use my Promo-code %1$s to get benefits. Download it from here:\n%2$s\n%3$s</string>
  <string name="title_app_name" translatable="false">UNIBuy</string>
  <string name="btn_ok">OK</string>
  <string name="btn_resend">Resend</string>
  <string name="msg_please_wait">Please wait</string>
  <string name="please_try_again">Please try again</string>
  <string name="message_storage_permission">Storage Permission</string>
  <string name="title_ratings">Ratings</string>
  <string name="title_my_jobs">My Jobs</string>
  <string name="title_my_jobs_agent">My Jobs</string>
  <string name="dummy_date" translatable="false">08 Oct 2016</string>
  <string name="notif_note_1">One new Job has been added to the topic \'Finance\'</string>
  <string name="notif_note_2">Your request for Job #672 has been accepted by the Requester</string>
  <string name="notif_note_3">Job #877 is will be completed soon, please clear payments with the
    Requester
  </string>
  <string name="notif_note_4">Amount has been transferred in your UNIBuy Wallet.</string>
  <string name="notif_note_5">Adam Lyth has paused the Job #675</string>
  <string name="title_notification_empty">Notifications</string>
  <string name="title_notification">Notifications (%1$d)</string>
  <string name="message_center">Message Center</string>
  <string name="decline">Decline</string>
  <string name="message_cancelled_job">This job is in cancelled Mode. You would no longer being
    continue on it.
  </string>
  <string name="dummy_terms" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
    Curabitur fermentum, nunc ac venenatis mollis, orci lorem vestibulum nibh, a consectetur felis
    sem vel magna. Phasellus rutrum semper bibendum. Proin posuere lacus eget magna pharetra, vel
    vulputate mi consectetur.
  </string>
  <string name="message_completed_job">This job has been completed.
  </string>
  <string name="message_paused_job">This job is in paused mode by either client or you. For Re-activate it use below option.
  </string>
  <string name="message_dispute_job">This job has been in dispute mode by either client or you. For more kindly please contact to an admin.
  </string>
  <string name="re_active_job">Re-Active Job</string>
  <string name="title_settings">Settings</string>
  <string name="text_log_out">Log Out</string>
  <string name="text_switch_to_questioner">Switch to Requester</string>
  <string name="text_switch_to_agent">Switch to Agent</string>
  <string name="text_manage_credit_card">Manage Credit Card</string>
  <string name="text_english_checkbox" translatable="false">English</string>
  <string name="text_chinese" translatable="false">中文</string>
  <string name="title_job_status">Job Status</string>
  <string name="transaction">Transactions</string>
  <string name="app_tour_guide">App Tour Guide</string>
  <string name="text_manage_notifications">Manage Notifications</string>
  <string name="text_expert_topic">New Post in Expertise Location</string>
  <string name="text_consignment_size">Budget</string>
  <string name="text_agent_commission">Agent Commission</string>
  <string name="description">Description:</string>
  <string name="text_delete_account">Delete Account</string>
  <string name="btn_delete">Delete</string>
  <string name="title_job_center">Job Center</string>
  <string name="title_dispute_center">Dispute Center</string>
  <string name="title_msg_center">Message Center</string>
  <string name="dummy_chat_message" translatable="false">Hello I am no coming here\n would like to tell me the truth it
    whart
  </string>
  <string name="text_send">Send</string>
  <string name="title_profile">Profile</string>
  <string name="text_edit_profile">Edit Profile</string>
  <string name="hint_text_expertise">Expertise:</string>
  <string name="hint_favourable_category">Favourable Location</string>
  <string name="hint_text_bio">Bio</string>
  <string name="text_cancel">Cancel</string>
  <string name="text_submit">Submit</string>
  <string name="rtm_storage_permission">Storage Permission</string>
  <string name="title_earnings">Earnings</string>
  <string name="sub_title_transaction_history">Transaction History</string>
  <string name="msg_transaction_received">Received amount for completing Job #%s</string>
  <string name="msg_transaction_withdraw">Withdraw amount for earnings</string>
  <string name="msg_transaction_deducted">Deducted amount for leaving Job #%s</string>
  <string name="title_referralcode">Referral Code</string>
  <string name="text_get_benifits">Get Benefits</string>
  <string name="text_share_code">Share this code with your friends and</string>
  <string name="text_get_benifits_in_jobs">get benefits in your jobs when they</string>
  <string name="text_sign_up_using_your_code">sign up using your code</string>
  <string name="text_share_your_code">Share your Code</string>
  <string name="text_share">Share</string>
  <string name="text_documents">Documents:</string>
  <string name="text_withdraw">Withdraw</string>
  <string name="text_withdraw_notes">* Minimum redeemable Amount is 100 HK$</string>
  <string name="text_my_earnings">My Earnings :</string>
  <string name="bank_1" translatable="false">Bank of Hong Kong(47-*********26)</string>
  <string name="bank_2" translatable="false">Bank of Asia(47-*********26)</string>
  <string name="title_withdraw">Withdraw</string>
  <string name="promo_balance">Promo Balance</string>
  <string name="message_delete_account">Are you sure, you want to delete account?</string>
  <string name="message_switch_account">Are you sure, you want to switch account?</string>
  <string name="switch_to_questioner">Switch to Requester?</string>
  <string name="switch_to_agent">Switch to Agent?</string>
  <string name="category">Items location</string>
  <string name="title_category">Items location</string>
  <string name="title_sub_category">Items category</string>
  <string name="message_log_out">Are you sure, you want to log out?</string>
  <string name="text_complete_job">Are you sure you want to mark this job as completed?</string>
  <string name="text_yes">Yes</string>
  <string name="text_no">No</string>
  <string name="title_rate_the_agent">Great! Rate the Agent!</string>
  <string name="title_rate_the_requester">Great! Rate the Requester!</string>
  <string name="permission_request">Permission Request</string>
  <string name="title_messages">Messages (%1$d)</string>
  <string name="title_messages_empety">Messages</string>
  <string name="title_new_job">New Job</string>
  <string name="hint_job_details">Items description</string>
  <string name="hint_consignment_size">HKD Budget (Optional, For agent Reference)</string>
  <string name="hint_agent_fee">AGENT FEE</string>
  <string name="hint_completion_date_time">COMPLETION DATE TIME</string>
  <string name="hint_quantity">QUANTITY</string>
  <string name="hint_promotional_code">PROMOTIONAL CODE</string>
  <string name="text_post">Post</string>
  <string name="text_clear">Clear</string>
  <string name="title_terms_conditions">Terms &amp; Conditions</string>
  <string name="text_accept">Accept</string>
  <string name="text_decline">Decline</string>
  <string name="text_reject">Hide</string>
  <string name="applicantSize">Applicant(%d)</string>
  <string name="applicantsSize">Applicants(%d)</string>
  <string name="title_questioner_agent_profile">Agent Profile and Offer</string>
  <string name="title_help">Help</string>
  <string name="title_spend">My Spends</string>
  <string name="title_transaction">Transactions</string>
  <string name="ddmmyy" translatable="false">DD/MM/YYYY</string>
  <string name="filters">Filters</string>
  <string name="posting_date">Posting Date</string>
  <string name="expiry_date">Expiry Date</string>
  <string name="fee_range">Budget Range</string>
  <string name="reset">Reset</string>
  <string name="txt_enterbank_name">Enter bank account name</string>
  <string name="hint_agent_offer_price">Offer Price</string>
  <string name="hint_delivery_place">Type Delivery Place</string>
  <string name="text_delivery_place">Delivery Place:</string>
  <string name="text_place_unideal">UNIBuy</string>
  <string name="text_place_custom">Custom</string>
</resources>