<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

  <data class="EnterBankBinding"/>


  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorWhite"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="27dp"
        android:text="@string/title_app_name"
        android:textAllCaps="true"
        android:textColor="@color/colorOuterSpace"
        android:textSize="15sp"
        tools:text="Title"
        />


    <EditText
        android:id="@+id/entermessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:hint="@string/txt_enterbank_name"
        android:singleLine="true"
        android:textColor="@color/colorShark"
        android:textColorHint="@color/colorOsloGray"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >


      <Button
          android:id="@+id/ok"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_weight="1"
          android:text="@string/ok"
          style="@style/Button.Cancel"
          />

      <Button
          android:id="@+id/cancel"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginLeft="8dp"
          android:layout_marginRight="8dp"
          android:layout_weight="1"
          android:text="@string/btn_cancel"
          style="@style/Button.Cancel"
          />

    </LinearLayout>
  </LinearLayout>
</layout>