<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data class="SimpleContentBinding"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >

    <TextView
        android:id="@+id/textViewContentTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginEnd="36dp"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="28dp"
        android:textColor="@color/colorShark"
        android:textSize="15sp"
        tools:text="@string/text_complete_job"
        style="@style/fontAvenirMedium"
        />

    <LinearLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="26dp"
        android:orientation="vertical"
        >

      <Button
          android:id="@+id/yesButton"
          android:text="@string/text_yes"
          style="@style/ButtonDialogYes"
          />

      <Button
          android:id="@+id/noButton"
          android:layout_marginBottom="20dp"
          android:layout_marginTop="12dp"
          android:text="@string/text_no"
          style="@style/ButtonDialogNo"
          />
    </LinearLayout>

  </LinearLayout>
</layout>