<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >
  <data class="QJobDetailsBinding"/>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical"
      >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        >
      <TextView
          android:id="@+id/textViewDetails"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:background="@drawable/btn_rounded"
          android:clickable="true"
          android:gravity="center"
          android:minHeight="28dp"
          android:minWidth="120dp"
          android:text="@string/details"
          android:textColor="@color/selector_rounded"
          android:visibility="gone"
          tools:visibility="visible"
          />
      <TextView
          android:id="@+id/textViewApplicants"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:background="@drawable/btn_rounded"
          android:gravity="center"
          android:minHeight="28dp"
          android:minWidth="120dp"
          android:text="@string/applicantSize"
          android:textColor="@color/selector_rounded"
          android:visibility="gone"
          tools:visibility="visible"
          />
      <TextView
          android:id="@+id/textViewJobCenter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:background="@drawable/btn_rounded"
          android:gravity="center"
          android:minHeight="28dp"
          android:minWidth="120dp"
          android:text="@string/job_center"
          android:textColor="@color/selector_rounded"
          android:visibility="gone"
          tools:visibility="visible"
          />
      <TextView
          android:id="@+id/textViewDisputeCenter"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="10dp"
          android:background="@drawable/btn_rounded"
          android:gravity="center"
          android:minHeight="28dp"
          android:minWidth="120dp"
          android:text="@string/dispute_center"
          android:textColor="@color/selector_rounded"
          android:visibility="gone"
          tools:visibility="visible"
          />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        />
  </LinearLayout>
</layout>
