<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data class="ProposalDataBinding" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorWhite">

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/dialog_content_padding">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/proposal_title"
                    android:textColor="@color/colorShark"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:text="@string/proposal_sub_title"
                    android:textColor="@color/colorShark"
                    android:textSize="14sp" />
                <!-- Proposal Description -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/colorProposalBg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <EditText
                        android:id="@+id/etSendProposal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@null"
                        android:gravity="top|left"
                        android:maxLength="180"
                        android:minHeight="180dp"
                        android:textSize="14sp"
                        tools:text="Enter the proposal description" />
                </LinearLayout>
                <!-- Offer Price/Delivery place -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:paddingBottom="16dp">

                    <EditText
                        android:id="@+id/editTextOfferPrice"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorProposalBg"
                        android:hint="@string/hint_agent_offer_price"
                        android:inputType="numberDecimal"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="14dp"
                        android:layout_marginTop="14dp"
                        android:text="@string/text_delivery_place"
                        android:textColor="@color/colorShark"
                        android:textSize="14sp" />

                    <RadioGroup
                        android:id="@+id/radioGroupDeliveryPlace"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioBtnUniDeal"
                            style="@style/UnidealRadioButtonAgent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/text_place_unideal" />

                        <RadioButton
                            android:id="@+id/radioBtnCustom"
                            style="@style/UnidealRadioButtonAgent"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:checked="true"
                            android:text="@string/text_place_custom" />
                    </RadioGroup>

                    <EditText
                        android:id="@+id/editTextCustomDelivery"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/colorProposalBg"
                        android:hint="@string/hint_delivery_place"
                        android:textSize="14sp"
                        android:visibility="visible"
                        tools:visibility="visible" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/content"
                android:gravity="center">

                <Button
                    android:id="@+id/btnSendProposal"
                    style="@style/ActionButton.sendProposal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/dialog_button_padding"
                    android:layout_marginTop="@dimen/dialog_button_padding"
                    android:text="@string/btn_send" />
            </LinearLayout>

            <ImageView
                android:id="@+id/imageViewClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:padding="16dp"
                app:srcCompat="@drawable/ic_close_proposal" />
        </RelativeLayout>
    </ScrollView>

</layout>