<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >
  <data class="FilterBinding"/>
  <RelativeLayout
      android:id="@+id/activity_filter"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/colorWhite"
      >
    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="11dp"
        app:srcCompat="@drawable/ic_close_proposal"
        />

    <TextView
        android:id="@+id/texViewFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/close"
        android:layout_centerHorizontal="true"
        android:text="@string/filters"
        android:textColor="@color/colorShark"
        android:textSize="16sp"
        style="@style/fontAvenirMedium"
        />

    <LinearLayout
        android:id="@+id/dateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/texViewFilter"
        android:layout_marginTop="39dp"
        android:visibility="gone">

      <TextView
          style="@style/fontAvenirMedium"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_alignParentLeft="true"
          android:layout_alignParentStart="true"
          android:layout_marginLeft="28dp"
          android:layout_marginStart="28dp"
          android:layout_weight="1"
          android:text="@string/posting_date"
          android:textColor="@color/colorShark"
          android:textSize="14sp" />

      <TextView
          style="@style/fontAvenirMedium"
          android:layout_width="0dp"
          android:layout_height="wrap_content"
          android:layout_alignParentEnd="true"
          android:layout_alignParentRight="true"
          android:layout_marginEnd="28dp"
          android:layout_marginRight="28dp"
          android:layout_weight="1"
          android:paddingLeft="20dp"
          android:paddingStart="20dp"
          android:text="@string/expiry_date"
          android:textColor="@color/colorShark"
          android:textSize="14sp" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/dateTextLayout"
        android:layout_width="wrap_content"
        android:layout_height="33dp"
        android:layout_below="@+id/dateLayout"
        android:layout_marginLeft="17dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="4dp"
        android:visibility="gone">

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="42dp"
          android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/postingDateLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="11dp"
            android:layout_weight="1"
            android:background="@color/colorBonJouree"
            android:gravity="center_vertical"
            android:orientation="vertical">

          <TextView
              android:id="@+id/postingDate"
              style="@style/fontAvenirBook"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="9dp"
              android:layout_marginStart="9dp"
              android:text="@string/ddmmyy"
              android:textColor="@color/colorShark"
              android:textSize="14sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/expiryDateLayout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="11dp"
            android:layout_marginRight="11dp"
            android:layout_weight="1"
            android:background="@color/colorBonJouree"
            android:gravity="center_vertical"
            android:orientation="horizontal">

          <TextView
              android:id="@+id/expiryDate"
              style="@style/fontAvenirBook"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_marginLeft="9dp"
              android:layout_marginStart="9dp"
              android:text="@string/ddmmyy"
              android:textColor="@color/colorShark"
              android:textSize="14sp" />
        </LinearLayout>
      </LinearLayout>
    </RelativeLayout>
    <TextView
        android:id="@+id/textViewCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/dateTextLayout"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_category"
        android:textColor="@color/colorShark"
        style="@style/fontAvenirMedium"
        />

    <Spinner
        android:id="@+id/category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewCategory"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        style="@style/SpinnerStyle"
        />

    <TextView
        android:id="@+id/textViewSubCategory"
        style="@style/fontAvenirMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/category"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_sub_category"
        android:textColor="@color/colorShark"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/subCategory"
        style="@style/SpinnerStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewSubCategory"
        android:layout_marginEnd="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginRight="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="8dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/feeRanging"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subCategory"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="25dp"
        android:text="@string/fee_range"
        android:textColor="@color/colorShark"
        android:textSize="14sp"
        style="@style/fontAvenirMedium"
        />
    <LinearLayout
        android:id="@+id/rangeSeekBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/feeRanging"
        android:layout_marginTop="21dp"
        android:orientation="vertical"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rangeSeekBarLayout"
        android:layout_marginTop="40dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        >
      <Button
          android:id="@+id/reset"
          android:layout_marginBottom="20dp"
          android:text="@string/reset"
          style="@style/ButtonAgent.Filter.reset"
          />
      <Button
          android:id="@+id/apply"
          android:layout_marginBottom="20dp"
          android:text="@string/btn_apply_job"
          style="@style/ButtonAgent.Filter"
          />
    </LinearLayout>
  </RelativeLayout>
</layout>